=== DRomics : Dose response for omics ===
Version 2.5-0 
=======================
NEW FEATURES
- Add of the function selectgroups() to select most represented and/or
most sensitive groups on which to focus for biological interpretation.
- Add of an RNAseq data with batch effect (zebraf)
- Add of PCAdataplot() a function to visualize omic data


Version 2.4-0 
=======================
NEW FEATURES
- Forbid the use of the "ANOVA" method to select items when more than half of the doses are without replicates (e.g. for in situ data)
- Add of a example data set named insitu_RNAseq_sample.txt for tests and examples
- Add of arguments BMDoutput and BMDtype to plot.drcfit() and 
plotfit2pdf to make possible the add of BMD values and confidence 
intervals on the plot of fits.
- Add of an argument (enablesfequal0inGP) by default at TRUE in drcfit(), to enable
the simplification of the Gauss-probit model with 5 parameters by its version with f = 0 
(which corresponds to the probit model) to prevent overfitting when the parameter f is close to 0 
(evaluated using the information criterion).
- Add of an argument (enablesfequal0inLGP) by default at TRUE in drcfit(), to enable
the simplification of the log-Gauss-probit model with 5 parameters by its version with f = 0 
(which corresponds to the log-probit model) to prevent overfitting when the parameter f is close to 0 
(evaluated using the information criterion).
- Add of an argument (preventsfitsoutofrange) by default at TRUE in drcfit() 
to prevent fits of biphasic models giving an extreme value out of the range of 
the observed signal, that could happen in rare cases.
- Add of a defensive code in microarraydata(), continuousomicdata(),
continuousanchoringdata(), RNAseqdata(), and the argument backgrounddose was added
to prevent the use of DRomics on a design with no dose at zero. 
In case of observationnal data, to prevent calculation of BMDs by extrapolation, 