@@ -15,6 +15,7 @@ returned by the item selection step. The given results are:
 - trend: the rough trend of the curve defined with four classes (U, bell, increasing or decreasing shape)
 - y0: theoretical value at the control
 - yrange: theoretical y range for x within the range of tested doses
+- maxychange: maximal absolute y change (up or down) from the control
 - xextrem: for biphasic curves, x value at which their extremum is reached
 - yextrem: the corresponding y value at this extremum
 - BMD.zSD: the BMD-zSD value
